Finish user following

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,1 +1,13 @@
 @import "bootstrap";
+
+header{
+    padding-bottom:30px;
+}
+
+#search{
+    padding-bottom:30px;
+}
+
+#links{
+    padding-bottom:30px;
+}
