--- a/app/views/article/input.erb
+++ b/app/views/article/input.erb
@@ -1,26 +1,30 @@
 <% provide(:title, '新規記事登録') %>
-<div class="col-md-6">
-  <h2>新規記事登録</h2>
+<div class="container">
+  <div class="row">
+    <div class="offset-md-3 col-md-6">
+      <h2 class="text-center">新規記事登録</h2>
+        
+      <%= form_for @articles, url: {action: "create"} do |f| %>  
+          
+        <div class="form-group">
+          <%= f.label :articleName, 'タイトル', class: "control-label" %>
+          <%= f.text_field :articleName, class: "form-control" %>
+        </div>
+        
+        <div class="form-group">
+          <%= f.label :articleDetail, '本文', class: "control-label" %>
+          <%= f.text_area :articleDetail, rows: '20', class: "form-control"  %>
+        </div>
     
-  <%= form_tag(:controller => "article", :action => "create") do %>
-      
-    <div class="form-group">
-      <%= label :articleName, 'タイトル', class: "control-label" %>
-      <%= text_field :articleName, class: "form-control" %>
-    </div>
+        <div class="form-group">
+          <%= f.label :articleClassification ,'種類', class: "control-label" %>
+          <%= f.select :articleClassification, [["PS4", "1"], ["Switch", "2"], ["PCゲーム", "3"], ["スマホ", "4"]], class: "form-control" %>
+        </div>
     
-    <div class="form-group">
-      <%= label :articleDetail, '本文', class: "control-label" %>
-      <%= text_area :articleDetail, :size => "50x50", class: "form-control"  %>
+          <%= f.submit '戻る', :name=>'back_btn', class: 'btn btn-success btn-centered'  %>
+          <%= f.submit '登録', :name=>'regist_btn', class: 'btn btn-success btn-centered' %>
+    
+      <% end %>
     </div>
-
-    <div class="form-group">
-      <%= label_tag :articleDetails ,'種類', class: "control-label" %>
-      <%= select :articleClassification, :values, [["PS4", "1"], ["Switch", "2"], ["PCゲーム", "3"], ["スマホ", "4"]], class: "form-control" %>
-    </div>
-
-      <%= submit_tag '戻る', :name=>'back_btn', class: 'btn btn-success btn-centered'  %>
-      <%= submit_tag '登録', :name=>'regist_btn', class: 'btn btn-success btn-centered' %>
-
-  <% end %>
+  </div>
 </div>
