--- a/app/views/article/list.html.erb
+++ b/app/views/article/list.html.erb
@@ -1,6 +1,56 @@
-<ul>
-  <% @articles.each do |f| %>
-    <li><%= link_to f.articleName, article_show_path(:articleNumber => f.articleNumber), :method => :post %></li>
-    <li><%= simple_format f.articleDetail %></li>
-  <% end %>
-</ul>
+<div class="container" id="search">
+  <div class="row">
+    <div class="form-inline my-2 my-lg-0">
+    <%= form_tag(:controller => "article", :action => "search") do %>
+      <%= text_field_tag :articleName, "", :class => "form-control mr-sm-2" %>
+      <%= submit_tag '検索', :class=>"btn btn-outline-success my-2 my-sm-0" %>
+    <% end %>
+    </div>
+  </div>
+</div>
+
+<div class="container" id="links">
+  <div class="row">
+    <div class="col-sm-2">
+     <%= link_to 'ホーム', article_top_path, :class=>'btn btn-primary btn-lg btn-block' %> 
+    </div>
+    <div class="col-sm-2">
+      <%= link_to '特集', article_list_path, :class=>'btn btn-primary btn-lg btn-block' %>
+    </div>
+    <div class="col-sm-2">
+     <%= link_to 'PS4', article_list_path(:articleClassification => "1"), :method => :post, :class=>'btn btn-primary btn-lg btn-block' %> 
+    </div>
+    <div class="col-sm-2">
+     <%= link_to 'Switch', article_list_path(:articleClassification => "2"), :method => :post, :class=>'btn btn-primary btn-lg btn-block' %> 
+    </div>
+    <div class="col-sm-2">
+     <%= link_to 'PCゲーム', article_list_path(:articleClassification => "3"), :method => :post, :class=>'btn btn-primary btn-lg btn-block' %>
+    </div>
+    <div class="col-sm-2">
+     <%= link_to 'スマホ', article_list_path(:articleClassification => "4"), :method => :post, :class=>'btn btn-primary btn-lg btn-block' %> 
+    </div>
+  </div>
+</div>
+
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+     <div class="bs-example">
+        <% @articles.each do |f| %>
+          <table class="table table-striped">
+            <thead>
+              <tr>
+                <th><%= link_to f.articleName, article_show_path(:articleNumber => f.articleNumber), :method => :post %></th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td><%= simple_format f.articleDetail %></td>
+              </tr>
+            </tbody>
+          </table>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
