--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,40 +1,45 @@
-<div class="col-md-6">
-<h2>プロフィール変更</h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
-
-  <div class="form-group">
-    <%= f.label :email, class: "control-label" %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control" %>
+<div class="container">
+  <div class="row">
+    <div class="offset-md-3 col-md-6">
+      <h2>プロフィール変更</h2>
+      
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+        <%= devise_error_messages! %>
+      
+        <div class="form-group">
+          <%= f.label :email, class: "control-label" %><br />
+          <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control" %>
+        </div>
+      
+        <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+          <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+        <% end %>
+      
+        <div class="form-group">
+          <%= f.label :password, class: "control-label" %>
+          <%= f.password_field :password, autocomplete: "new-password", class: "form-control" %>
+          <% if @minimum_password_length %>
+            <br />
+            <em>(最小<%= @minimum_password_length %> 文字)</em>
+          <% end %>
+        </div>
+      
+        <div class="form-group">
+          <%= f.label :password_confirmation, class: "control-label" %><br />
+          <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control" %>
+        </div>
+      
+        <div class="form-group">
+          <%= f.label :current_password, class: "control-label" %>
+          <%= f.password_field :current_password, autocomplete: "current-password", class: "form-control" %>
+        </div>
+      
+        <%= f.submit "更新", class: 'btn btn-success btn-centered' %>
+      <% end %>
+      
+      <h3>アカウントを削除する</h3>
+      
+      <p><%= button_to "削除", registration_path(resource_name), data: { confirm: "削除しますか？" }, method: :delete, class: 'btn btn-success btn-centered' %></p>
+    </div>
   </div>
-
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
-
-  <div class="form-group">
-    <%= f.label :password, class: "control-label" %>
-    <%= f.password_field :password, autocomplete: "new-password", class: "form-control" %>
-    <% if @minimum_password_length %>
-      <br />
-      <em>(最小<%= @minimum_password_length %> 文字)</em>
-    <% end %>
-  </div>
-
-  <div class="form-group">
-    <%= f.label :password_confirmation, class: "control-label" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control" %>
-  </div>
-
-  <div class="form-group">
-    <%= f.label :current_password, class: "control-label" %>
-    <%= f.password_field :current_password, autocomplete: "current-password", class: "form-control" %>
-  </div>
-
-  <%= f.submit "更新", class: 'btn btn-success btn-centered' %>
-<% end %>
-
-<h3>アカウントを削除する</h3>
-
-<p><%= button_to "削除", registration_path(resource_name), data: { confirm: "削除しますか？" }, method: :delete, class: 'btn btn-success btn-centered' %></p>
+</div>
